<resources>
    <string name="app_name">RastreadorDeportivo</string>
    <string name="rastreadordeportivo">Rastreador Deportivo</string>
    <string name="imagenlogo">Imagen del Logo</string>
    <string name="btnacceder">Acceder</string>
    <string name="password">Contraseña</string>
    <string name="sacarfoto">Sacar Foto</string>
    <string name="cogerfoto">Coger Foto</string>
    <string name="errorFoto">Falta una foto</string>
    <string name="errorClave">Clave Erronea</string>
    <string name="NuevoDeporte">Agregar Deporte</string>
    <string name="HaciaActividades">Ir a Actividades</string>
    <string name="nombreDep">Nombre</string>
    <string name="DescripcionDep">Descripcion...</string>
    <string name="ModificarDeporte">Modificar Deporte</string>
    <string name="BorrarDeporte">Borrar Deporte</string>
    <string name="CamposVacios">Rellene los campos de Nombre y Descripcion para realizar la accion</string>
    <string name="ModExisto">Accion Realizada con Existo</string>
    <string name="ModError">Error al realizar la accion</string>
    <string name="ErrorModEli">Elija uno de los deportes de la lista para realizar la accion</string>
    <string name="Error">Ha ocurrido una error</string>
    <string name="AgregarAct">Agregar Actividad</string>
    <string name="Duracion">"Duracion: "</string>
    <string name="Minutos">Minutos...</string>
    <string name="Deporte">"Deporte: "</string>
    <string name="Rellenar">Por Favor, Rellene todos los campos</string>
    <string name="ErrorCrear">Error al insertar la actividad, Intentelo de nuevo mas tarde</string>
    <string name="idDep">"ID Deporte: "</string>
    <string name="fecha">"Fecha: "</string>
    <string name="hora">"Hora: "</string>
    <string name="latitud">"Latitud: "</string>
    <string name="longitud">"Longitud: "</string>
    <string name="Localizar">Localizar</string>
    <string name="Bateria">Bateria:</string>
    <string name="OffSonido">Sonido Apagado</string>
    <string name="OnSonido">Sonido Encendido</string>
    <string name="ActDesSonido" >Activar/Desactivar Sonido</string>
</resources>