<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_claro"
    tools:context=".DeportesActivity">

    <EditText
        android:id="@+id/editTextNombreDeporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/azul_muy_oscuro"
        android:ems="10"
        android:hint="@string/nombreDep"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/azul_muy_oscuro"
        android:textColorHint="@color/azul_hint"
        android:textColorLink="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ButtonConfiguracion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSacarFoto3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/azul_muy_oscuro"
        android:fontFamily="@font/chopsic"
        android:text="@string/ModificarDeporte"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSacarFoto4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/azul_muy_oscuro"
        android:fontFamily="@font/chopsic"
        android:text="@string/BorrarDeporte"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSacarFoto3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/azul_muy_oscuro"
        android:fontFamily="@font/chopsic"
        android:text="@string/NuevoDeporte"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ListViewDeportes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSacarFoto3"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonActividades"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/azul_muy_oscuro"
        android:fontFamily="@font/chopsic"
        android:text="@string/HaciaActividades"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
        android:id="@+id/ListViewDeportes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonActividades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSacarFoto4" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/azul_muy_oscuro"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/DescripcionDep"
        android:inputType="textMultiLine"
        android:textColor="@color/azul_muy_oscuro"
        android:textColorHint="@color/azul_hint"
        android:textColorLink="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreDeporte"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ButtonConfiguracion"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/azul_muy_oscuro"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>